--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src='js/common.js'></script>
-    <script src="js/layout.js"></script>
-    <!-- <script src="js/layout.min.js"></script> -->
+    <!-- <script src="js/layout.js"></script> -->
+    <script src="js/layout.min.js"></script>
     <script src="js/animation.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script>
