--- a/main.html
+++ b/main.html
@@ -46,10 +46,8 @@
                             </label></p>
                     </div>
                     <div class="btn_tab">
-                        <div class='btns left_btn'>보험료 셀프 계산하기 <img class='btn_arrow3' src="img/common/btn_arrow.png"
-                                class='btn_arrow1' alt="계산기 화살표 이미지"></div>
-                        <div class='btns right_btn'>무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png"
-                                class='btn_arrow1' alt="계산기 화살표 이미지"></div>
+                        <div class='btns left_btn'>보험료 셀프 계산하기 <img class='btn_arrow3' src="img/common/btn_arrow.png" class='btn_arrow1' alt="계산기 화살표 이미지"></div>
+                        <div class='btns right_btn'>무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png" class='btn_arrow1' alt="계산기 화살표 이미지"></div>
                     </div>
                 </div>
             </section>
@@ -58,6 +56,9 @@
                     <div class="left_tab tabs" id='section_left'></div>
                     <div class="right_tab tabs" id='section_right'></div>
                 </div>
+            </section>
+            <section class="section2" id='section2'>
+                1
             </section>
         </main>
     </div>
@@ -68,6 +69,9 @@
         subLayoutRender.subSectionRender();
         subLayoutRender.subMainbannerRender()
         subLayoutRender.section1Render()
+        subLayoutRender.section2Render()
+
+
 
 
     </script>
