--- a/main.html
+++ b/main.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <meta property="og:url" content="http://bmcompany.kr">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="당신의 삶을 더욱 든든하게">
+    <meta property="og:title" content="BM Company">
+    <meta property="og:image" content="http://bmcompany.kr/og.jpg">
+    <link rel="shortcut icon" href="http://bmcompany.kr/favicon.ico">
+    <link rel="icon" href="http://bmcompany.kr/favicon.ico">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style_main.css">
-    <script src='js/common.js'></script>
-    <script src="js/layout.js"></script>
-    <script src="js/animation.js"></script>
-    <!-- <script src="js/layout.min.js"></script> -->
+  
     <title>보험친구들</title>
 </head>
+
 <body>
     <div id='wrap'>
         <header>
@@ -25,7 +30,7 @@
                 </div>
             </section>
             <div class='scroll_widget' id='floatMenu'>
-                    <!-- layoutRender.floatMenuRender(); -->
+                <!-- layoutRender.floatMenuRender(); -->
             </div>
             <section class='top_inputs'>
                 <div class="wrap">
@@ -46,8 +51,10 @@
                             </label></p>
                     </div>
                     <div class="btn_tab">
-                        <div class='btns left_btn'>보험료 셀프 계산하기 <img class='btn_arrow3' src="img/common/btn_arrow.png" class='btn_arrow1' alt="계산기 화살표 이미지"></div>
-                        <div class='btns right_btn'>무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png" class='btn_arrow1' alt="계산기 화살표 이미지"></div>
+                        <div class='btns left_btn'>보험료 셀프 계산하기 <img class='btn_arrow3' src="img/common/btn_arrow.png"
+                                class='btn_arrow1' alt="계산기 화살표 이미지"></div>
+                        <div class='btns right_btn'>무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png"
+                                class='btn_arrow1' alt="계산기 화살표 이미지"></div>
                     </div>
                 </div>
             </section>
@@ -58,18 +65,100 @@
                 </div>
             </section>
             <section class="section2" id='section2'>
-                1
             </section>
+            <section class="section3" id='section3'></section>
+            <section class="section4" id='section4'>
+                <div class="wrap">
+                    <h2>스피드 보험비교</h2>
+                    <p>보험친구들에서 추천하는 상품을 비교해보세요.(최대 2개의 상품을 비교해보실 수 있습니다.)</p>
+                    <div class="fn_boxs">
+                        <div class='fn_box fn_box1'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                내Mom 같은 어린이보험<span>(해지환급금미지급형)</span>
+                            </p>
+                            <div class="more_btn">자세히보기</div>
+                        </div>
+                        <div class='fn_box fn_box2'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                맘편한착한가격자녀사랑보험<span>(해지환급금미지급형)</span>
+                            </p>
+                            <div class="more_btn">자세히보기</div>
+
+                        </div>
+                        <div class='fn_box fn_box3'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                1등엄마의똑똑한자녀보험<span>(2종:금리연동형)</span>
+                            </p>
+                            <div class="more_btn">자세히보기</div>
+
+                        </div>
+                        <div class='fn_box fn_box4'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                굿앤굿어린이스타종합보험<span>(해지환급금미지급형)</span>
+                            </p>
+                            <div class="more_btn">자세히보기</div>
+
+                        </div>
+                        <div class='fn_box fn_box5'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                   아이러브건강보험<span>(해지환급금미지급형)</span>
+                                </p>
+                                <div class="more_btn">자세히보기</div>
+
+                        </div>
+                        <div class='fn_box fn_box6'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                    애지중지아이사랑보험<span>(해지환급금미지급형)</span>
+                                </p>
+                                <div class="more_btn">자세히보기</div>
+
+                        </div>
+                        <div class='fn_box fn_box7'>
+                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
+                            <div class="fn_icon"></div>
+                            <p>
+                                    도담도담자녀보험<span>(2종:금리연동형)</span>
+                                </p>
+                                <div class="more_btn">자세히보기</div>
+
+                        </div>
+
+                    </div>
+                    <div class="fn_btn">보험 비교하기</div>
+
+                </div>
+            </section>
+
         </main>
+        <footer></footer>
     </div>
+    <script src='js/common.js'></script>
+    <!-- <script src="js/layout.js"></script> -->
+    <script src="js/layout.min.js"></script>
+    <script src="js/animation.js"></script>
     <script>
         layoutRender.HeaderRender();
         layoutRender.floatMenuRender();
         activeList();
         subLayoutRender.subSectionRender();
         subLayoutRender.subMainbannerRender()
-        subLayoutRender.section1Render()    
+        subLayoutRender.section1Render()
         subLayoutRender.section2Render()
+        subLayoutRender.section3Render()
+        layoutRender.footerRender();
+
 
 
 
