--- a/main.html
+++ b/main.html
@@ -67,79 +67,7 @@
             <section class="section2" id='section2'>
             </section>
             <section class="section3" id='section3'></section>
-            <section class="section4" id='section4'>
-                <div class="wrap">
-                    <h2>스피드 보험비교</h2>
-                    <p>보험친구들에서 추천하는 상품을 비교해보세요.(최대 2개의 상품을 비교해보실 수 있습니다.)</p>
-                    <div class="fn_boxs">
-                        <div class='fn_box fn_box1'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                내Mom 같은 어린이보험<span>(해지환급금미지급형)</span>
-                            </p>
-                            <div class="more_btn">자세히보기</div>
-                        </div>
-                        <div class='fn_box fn_box2'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                맘편한착한가격자녀사랑보험<span>(해지환급금미지급형)</span>
-                            </p>
-                            <div class="more_btn">자세히보기</div>
-
-                        </div>
-                        <div class='fn_box fn_box3'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                1등엄마의똑똑한자녀보험<span>(2종:금리연동형)</span>
-                            </p>
-                            <div class="more_btn">자세히보기</div>
-
-                        </div>
-                        <div class='fn_box fn_box4'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                굿앤굿어린이스타종합보험<span>(해지환급금미지급형)</span>
-                            </p>
-                            <div class="more_btn">자세히보기</div>
-
-                        </div>
-                        <div class='fn_box fn_box5'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                   아이러브건강보험<span>(해지환급금미지급형)</span>
-                                </p>
-                                <div class="more_btn">자세히보기</div>
-
-                        </div>
-                        <div class='fn_box fn_box6'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                    애지중지아이사랑보험<span>(해지환급금미지급형)</span>
-                                </p>
-                                <div class="more_btn">자세히보기</div>
-
-                        </div>
-                        <div class='fn_box fn_box7'>
-                            <img src="img/sub_page/section4_bedge.png" class='bedge' alt="bedge">
-                            <div class="fn_icon"></div>
-                            <p>
-                                    도담도담자녀보험<span>(2종:금리연동형)</span>
-                                </p>
-                                <div class="more_btn">자세히보기</div>
-
-                        </div>
-
-                    </div>
-                    <div class="fn_btn">보험 비교하기</div>
-
-                </div>
-            </section>
+            <section class="section4" id='section4'></section>
 
         </main>
         <footer></footer>
@@ -157,6 +85,7 @@
         subLayoutRender.section1Render()
         subLayoutRender.section2Render()
         subLayoutRender.section3Render()
+        subLayoutRender.section4Render()
         layoutRender.footerRender();
 
 
