--- a/main.html
+++ b/main.html
@@ -73,8 +73,8 @@
         <footer></footer>
     </div>
     <script src='js/common.js'></script>
-    <!-- <script src="js/layout.js"></script> -->
-    <script src="js/layout.min.js"></script>
+    <script src="js/layout.js"></script>
+    <!-- <script src="js/layout.min.js"></script> -->
     <script src="js/animation.js"></script>
     <script>
         layoutRender.HeaderRender();
