--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='description' contnet="보험,유전자,암,치매,2대질병,태아보험">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -18,8 +19,7 @@
     <link rel="shortcut icon" href="http://bmcompany.kr/favicon.ico">
     <link rel="icon" href="http://bmcompany.kr/favicon.ico">
     <script src='js/common.js'></script>
-    <script src="js/layout.js"></script>
-    <!-- <script src="js/layout.min.js"></script> -->
+    <script src="js/layout.min.js"></script>
     <script src="js/animation.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script>
@@ -92,16 +92,20 @@
             var current = slider.getCurrentSlide();
             $('.pc_slides').bxSlider({ auto: true });//bxslider
         })
-     
     </script>
     <title>보험친구들</title>
 </head>
 <body>
     <div id='wrap'>
-        <div class="popups" id='popup_box'>
-            <div class='loader'>
-            </div>
-        </div>
+       <div class="popups" id='popup_box'>
+                    <div class='loader'>
+                    </div>
+                </div>
+                <div class='popups insert_popup' id='insert_box'>
+                    <div class='insert_box' id='innser_insert'>
+                            <div class='loader'></div>
+                    </div>
+                </div>
         <header>
             <!-- js/layout.js => layoutRender.HeaderRender(); -->
         </header>
@@ -172,7 +176,7 @@
                         <h2>우리나라 <span>가계소득 대비</span></h2>
                         <h2>월 보험료는?</h2>
                         <p>국내 가계의 보험료 지출이 소득대비 과다하고,</br> 중도해지로 인한 재무 손실 위험이 높은 것으로 평가 되었습니다.</p>
-                        <div class='btn'>
+                        <div class='btn' onclick="popupRender.speedpopup(0)">
                             보험료 셀프계산기 <img src="img/common/btn_arrow.png" class='btn_arrow1' alt="계산기 화살표 이미지">
                         </div>
                     </div>
@@ -202,7 +206,7 @@
                         <h2>보험가입자 <span>약 70% 이상이</span></h2>
                         <h2>보험해약을 합니다.</h2>
                         <p>보험가입자 70% 이상이 보장내역은 확인하지 않은 채</br>지인의 권유로 보험가입을 하고 또 해약을 합니다.</p>
-                        <div class='btn'>
+                        <div class='btn' onclick='popupRender.insertTapRender()'>
                             빠른 상담 신청하기<img src="img/common/btn_arrow.png" class='btn_arrow2' alt="계산기 화살표 이미지">
                         </div>
                     </div>
@@ -256,8 +260,6 @@
                         </label>
                     </p>
                     <div class='btns_wrap'>
-                        <div class='btns left_btn'>보험료 셀프 계산하기 <img class='btn_arrow3' src="img/common/btn_arrow.png"
-                                class='btn_arrow1' alt="계산기 화살표 이미지"></div>
                         <div class='btns right_btn'>무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png"
                                 class='btn_arrow1' alt="계산기 화살표 이미지"></div>
                     </div>
