--- a/main.html
+++ b/main.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style_main.css">
     <link rel="stylesheet" href="css/popup.css">
+
+    <link rel="stylesheet" href="jquery/jquery-ui.min.css">
+    <script src="jquery/jquery-ui.min.js"></script>
+    <script src="jquery/datepicker-ko.js"></script>
   
     <title>보험친구들</title>
 </head>
@@ -83,6 +87,8 @@
         <footer></footer>
     </div>
     <script src='js/common.js'></script>
+    <!-- <script src="js/layout.js"></script> -->
+
     <script src="js/layout.min.js"></script>
     <script src="js/animation.js"></script>
     <script>
