--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <link rel="icon" href="http://bmcompany.kr/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src='js/common.js'></script>
-    <script src="js/layout.js"></script>
-    <!-- <script src="js/layout.min.js"></script> -->
+    <script src="js/layout.min.js"></script>
     <script src="js/animation.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
         
@@ -171,9 +170,9 @@
                     <h3>빠른 상담신청</h3>
                     <p>입력하신 번호로 연락 드립니다.</p>
                     <ul class="tab_forms">
-                        <li class="inputs"><input type="text" placeholder="이름"></li>
-                        <li class="inputs"><input type="text" placeholder="연락받으실 전화번호"></li>
-                        <li class='btn'>상담 신청</li>
+                        <li class="inputs"><input type="text" id='fast_reqname' placeholder="이름"></li>
+                        <li class="inputs"><input type="text" id='fast_reqphone' placeholder="연락받으실 전화번호"></li>
+                        <li class='btn' onclick="dataInsertFn('fastInsert')">상담 신청</li>
                     </ul>
                 </div>
 
@@ -215,7 +214,7 @@
                         <h2>보험가입자 <span>약 70% 이상이</span></h2>
                         <h2>보험해약을 합니다.</h2>
                         <p>보험가입자 70% 이상이 보장내역은 확인하지 않은 채</br>지인의 권유로 보험가입을 하고 또 해약을 합니다.</p>
-                        <div class='btn' onclick='popupRender.insertTapRender("mainSection2")'>
+                        <div class='btn' onclick='popupRender.insertTapRender("mainsection","mainsection")'>
                             빠른 상담 신청하기<img src="img/common/btn_arrow.png" class='btn_arrow2' alt="계산기 화살표 이미지">
                         </div>
                     </div>
@@ -254,12 +253,12 @@
                             </select>
 
                         </div>
-                        <div class='input_box' id='reqbirth'>
-                            <input type="text" placeholder="생년월일(예:850505)">
+                        <div class='input_box'>
+                            <input type="text" id='reqbirth' placeholder="생년월일(예:850505)">
 
                         </div>
-                        <div class='input_box' id='reqphone'>
-                            <input type="text" placeholder="휴대폰번호">
+                        <div class='input_box'>
+                            <input type="text" id='reqphone' placeholder="휴대폰번호">
                         </div>
                     </div>
                     <p>
