--- a/main.html
+++ b/main.html
@@ -54,10 +54,15 @@
                     </div>
                     <div class='input_tab'>
                         <ul class="inputs">
-                            <li><input type="text" name="" id="" placeholder="이름"></li>
-                            <li><input type="text" name="" id="" placeholder="성별"></li>
-                            <li><input type="text" name="" id="" placeholder="생년월일"></li>
-                            <li><input type="text" name="" id="" placeholder="휴대폰번호"></li>
+                            <li><input type="text" name="" id="reqname" placeholder="이름"></li>
+                            <li><select type="text" id="sexflag">
+                                <option>==성별==</option>
+                                <option value="남성">남성</option>
+                                <option value="여성">여성</option>
+
+                            </select></li>
+                            <li><input type="text" name="" id="reqbirth" placeholder="생년월일"></li>
+                            <li><input type="text" name="" id="reqphone" placeholder="휴대폰번호"></li>
                         </ul>
                         <p><label class="container" id='check_label' onclick="checkBoxEvent()">개인정보 수집 및 이용 동의 합니다.
                                 <input type="checkbox" id='agree_check'>
@@ -67,7 +72,7 @@
                     <div class="btn_tab">
                         <div class='btns left_btn' onclick="popupRender.calculateFn(0)">보험료 셀프 계산하기 <img class='btn_arrow3' src="img/common/btn_arrow.png"
                                 class='btn_arrow1' alt="계산기 화살표 이미지"></div>
-                        <div class='btns right_btn'>무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png"
+                        <div class='btns right_btn' onclick="dataInsertFn('submain')">무료 상담 신청하기 <img class='btn_arrow4' src="img/common/btn_arrow.png"
                                 class='btn_arrow1' alt="계산기 화살표 이미지"></div>
                     </div>
                 </div>
@@ -82,13 +87,10 @@
             </section>
             <section class="section3" id='section3'></section>
             <section class="section4" id='section4'></section>
-
         </main>
         <footer></footer>
     </div>
     <script src='js/common.js'></script>
-    <!-- <script src="js/layout.js"></script> -->
-
     <script src="js/layout.min.js"></script>
     <script src="js/animation.js"></script>
     <script>
