page5 넘버링 랜더 해결해야함

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <h2>우리나라 <span>가계소득 대비</span></h2>
                         <h2>월 보험료는?</h2>
                         <p>국내 가계의 보험료 지출이 소득대비 과다하고,</br> 중도해지로 인한 재무 손실 위험이 높은 것으로 평가 되었습니다.</p>
-                        <div class='btn' onclick="popupRender.speedpopup(0)">
+                        <div class='btn' onclick="popupRender.calculateFn(0)">
                             보험료 셀프계산기 <img src="img/common/btn_arrow.png" class='btn_arrow1' alt="계산기 화살표 이미지">
                         </div>
                     </div>
