서브페이지 작업중

--- a/mo_index.html
+++ b/mo_index.html
@@ -139,7 +139,7 @@
         </header>
         <div class='mo_head'>
             <div class='wrap'>
-                <h1><img src="img/common/header-h1-BI.png" alt=""></h1>
+                <h1><a href='mo_index.html'><img src="img/common/header-h1-BI.png" alt="보험친구들 로고"></a></h1>
                 <ul class='mo_nav' id='mo_nav_render' onclick="moNavRender(this)">
                     <li></li>
                     <li></li>
