--- a/main.html
+++ b/main.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="jquery/jquery-ui.min.css">
     <script src="jquery/jquery-ui.min.js"></script>
     <script src="jquery/datepicker-ko.js"></script>
+    <script>
+  
+    </script>
   
     <title>보험친구들</title>
 </head>
@@ -83,8 +86,7 @@
                     <div class="right_tab tabs" id='section_right'></div>
                 </div>
             </section>
-            <section class="section2" id='section2'>
-            </section>
+            <section class="section2" id='section2'></section>
             <section class="section3" id='section3'></section>
             <section class="section4" id='section4'></section>
         </main>
