--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="icon" href="http://bmcompany.kr/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src='js/common.js'></script>
-    <script src="js/layout.min.js"></script>
+    
+    <script src="js/layout.js"></script>
     <script src="js/animation.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <link rel="stylesheet" href="jquery/jquery-ui.min.css">
