--- a/mo_main.html
+++ b/mo_main.html
@@ -133,8 +133,8 @@
         if(pageNo!="5" && pageNo!="6"){
         subLayoutRender.section1Render()
         subLayoutRender.section2Render()
-        // subLayoutRender.section3Render()
-        // subLayoutRender.section4Render()
+        subLayoutRender.section3Render()
+        subLayoutRender.section4Render()
         }
         else if(pageNo == "5"){
             subLayoutRender.page5Layout()
@@ -144,10 +144,6 @@
             subLayoutRender.page6Layout()
         }
         layoutRender.footerRender();
-
-
-      
-
 
     </script>
 </body>
