--- a/main.html
+++ b/main.html
@@ -90,8 +90,9 @@
         <footer></footer>
     </div>
     <script src='js/common.js'></script>
-    <script src="js/layout.js"></script>
     <!-- <script src="js/layout.min.js"></script> -->
+    <script src="js/layout.js"></script>
+
     <script src="js/animation.js"></script>
     <script>
         layoutRender.HeaderRender();
@@ -116,6 +117,12 @@
             subLayoutRender.page6Layout()
         }
         layoutRender.footerRender();
+
+        setTimeout(function(){
+
+            subLayoutRender.insZoom()
+        },100)
+
 
 
       
